--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
 # Django
 Django==2.1.3
 pytz==2018.7
+
+
+# Decouple
+python-decouple==3.1
+python-dotenv==0.9.1
+
+# Heroku
+dj-database-url==0.5.0
+django-heroku==0.3.1
+psycopg2==2.7.6.1
+whitenoise==4.1.2
+gunicorn==19.9.0
