--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,21 @@ python-dotenv==0.9.1
 dj-database-url==0.5.0
 django-heroku==0.3.1
 psycopg2==2.7.6.1
+psycopg2-binary==2.7.6.1
 whitenoise==4.1.2
 gunicorn==19.9.0
 
 # Images
 Pillow==5.3.0
+
+# Cloudinary
+certifi==2018.10.15
+chardet==3.0.4
+cloudinary==1.14.0
+django-cloudinary-storage==0.2.3
+idna==2.7
+mock==2.0.0
+pbr==5.1.1
+requests==2.20.1
+six==1.11.0
+urllib3==1.24.1
