--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # Django
-Django==3.0.3
+Django==3.0.4
 asgiref==3.2.3
 pytz==2019.3
 
 # Decouple
 python-decouple==3.3
-python-dotenv==0.11.0
+python-dotenv==0.12.0
 
 # Heroku
 dj-database-url==0.5.0
@@ -22,11 +22,11 @@ Pillow==7.0.0
 certifi==2019.11.28
 chardet==3.0.4
 cloudinary==1.20.0
-git+git://github.com/tiagocordeiro/django-cloudinary-storage@Django3Support
-idna==2.8
+-e git://github.com/tiagocordeiro/django-cloudinary-storage.git@master#egg=django-cloudinary-storage
+idna==2.9
 mock==4.0.1
 pbr==5.4.4
-requests==2.22.0
+requests==2.23.0
 six==1.14.0
 urllib3==1.25.8
 
@@ -34,10 +34,10 @@ urllib3==1.25.8
 pybling==0.0.9
 
 # Sentry
-sentry-sdk==0.14.1
+sentry-sdk==0.14.2
 
 # Crispy Forms
-django-crispy-forms==1.8.1
+django-crispy-forms==1.9.0
 
 # Quandl
 inflection==0.3.1
