--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Django
-Django==3.0.4
-asgiref==3.2.3
+Django==3.0.5
+asgiref==3.2.7
 pytz==2019.3
 
 # Decouple
@@ -10,22 +10,22 @@ python-dotenv==0.12.0
 # Heroku
 dj-database-url==0.5.0
 django-heroku==0.3.1
-psycopg2==2.8.4
-psycopg2-binary==2.8.4
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 whitenoise==5.0.1
 gunicorn==20.0.4
 
 # Images
-Pillow==7.0.0
+Pillow==7.1.1
 
 # Cloudinary
-certifi==2019.11.28
+certifi==2020.4.5.1
 chardet==3.0.4
 cloudinary==1.20.0
--e git://github.com/tiagocordeiro/django-cloudinary-storage.git@master#egg=django-cloudinary-storage
+dj3-cloudinary-storage==0.0.1
 idna==2.9
-mock==4.0.1
-pbr==5.4.4
+mock==4.0.2
+pbr==5.4.5
 requests==2.23.0
 six==1.14.0
 urllib3==1.25.8
@@ -34,16 +34,16 @@ urllib3==1.25.8
 pybling==0.0.9
 
 # Sentry
-sentry-sdk==0.14.2
+sentry-sdk==0.14.3
 
 # Crispy Forms
 django-crispy-forms==1.9.0
 
 # Quandl
-inflection==0.3.1
+inflection==0.4.0
 more-itertools==8.2.0
-numpy==1.18.1
-pandas==1.0.1
+numpy==1.18.2
+pandas==1.0.3
 python-dateutil==2.8.1
 quandl==3.5.0
 
@@ -56,7 +56,7 @@ xlwt==1.3.0
 # PDF
 html5lib==1.0.1
 pyPdf2==1.26.0
-reportlab==3.5.34
+reportlab==3.5.42
 webencodings==0.5.1
 xhtml2pdf==0.2.4
 
