--- a/setup.cfg
+++ b/setup.cfg
@@ -21,6 +21,6 @@ exclude =
     dist,
     venv
 count = False
-ignore = E226,E302,E41
+ignore = E226,E302,E41,W503
 max-line-length = 119
 statistics = True
